fixed overflow for table

--- a/src/index.scss
+++ b/src/index.scss
@@ -198,10 +198,13 @@ body, #app{
     min-height: 100vh;
     display: flex;
     .wrap{
+        display: flex;
+        overflow: auto;
+        flex-direction: column;
         height:auto;
         width: 100%;
         margin-left:$navbar-width;
-        /* padding: $added-padding; */
+        padding: $added-padding;
         padding-top: $added-padding+$header-height;
         h2, h3 {
             margin: 0px;
@@ -284,7 +287,6 @@ body, #app{
             }
         }
         .users-header {
-            padding: 0px $added-padding;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -310,7 +312,6 @@ body, #app{
             }
         }
         .users-table {
-            margin: 0px $added-padding;
             overflow-x: auto;
             table{
                 width: 100%;
